--- a/environment.yml
+++ b/environment.yml
@@ -1,44 +1,47 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: osx-64
-@EXPLICIT
-https://conda.anaconda.org/conda-forge/osx-64/ca-certificates-2019.11.28-hecc5488_0.tar.bz2
-https://conda.anaconda.org/conda-forge/osx-64/jpeg-9c-h1de35cc_1001.tar.bz2
-https://conda.anaconda.org/conda-forge/osx-64/libcxx-9.0.1-1.tar.bz2
-https://conda.anaconda.org/conda-forge/osx-64/llvm-openmp-9.0.1-h28b9765_1.tar.bz2
-https://conda.anaconda.org/conda-forge/osx-64/xz-5.2.4-h1de35cc_1001.tar.bz2
-https://conda.anaconda.org/conda-forge/osx-64/zlib-1.2.11-h0b31af3_1006.tar.bz2
-https://conda.anaconda.org/conda-forge/osx-64/libffi-3.2.1-h6de7cb9_1006.tar.bz2
-https://conda.anaconda.org/conda-forge/osx-64/libgfortran-4.0.0-2.tar.bz2
-https://conda.anaconda.org/conda-forge/osx-64/libpng-1.6.37-h2573ce8_0.tar.bz2
-https://conda.anaconda.org/conda-forge/osx-64/lz4-c-1.8.3-h6de7cb9_1001.tar.bz2
-https://conda.anaconda.org/conda-forge/osx-64/ncurses-6.1-h0a44026_1002.tar.bz2
-https://conda.anaconda.org/conda-forge/osx-64/openssl-1.1.1d-h0b31af3_0.tar.bz2
-https://conda.anaconda.org/conda-forge/osx-64/tk-8.6.10-hbbe82c9_0.tar.bz2
-https://conda.anaconda.org/conda-forge/osx-64/freetype-2.10.0-h24853df_1.tar.bz2
-https://conda.anaconda.org/conda-forge/osx-64/libopenblas-0.3.7-h3d69b6c_7.tar.bz2
-https://conda.anaconda.org/conda-forge/osx-64/readline-8.0-hcfe32e1_0.tar.bz2
-https://conda.anaconda.org/conda-forge/osx-64/zstd-1.4.4-he7fca8b_1.tar.bz2
-https://conda.anaconda.org/conda-forge/osx-64/libblas-3.8.0-14_openblas.tar.bz2
-https://conda.anaconda.org/conda-forge/osx-64/libtiff-4.1.0-ha78913b_3.tar.bz2
-https://conda.anaconda.org/conda-forge/osx-64/sqlite-3.30.1-h93121df_0.tar.bz2
-https://conda.anaconda.org/conda-forge/osx-64/libcblas-3.8.0-14_openblas.tar.bz2
-https://conda.anaconda.org/conda-forge/osx-64/liblapack-3.8.0-14_openblas.tar.bz2
-https://conda.anaconda.org/conda-forge/osx-64/python-3.8.1-h5c2c468_1.tar.bz2
-https://conda.anaconda.org/conda-forge/osx-64/certifi-2019.11.28-py38_0.tar.bz2
-https://conda.anaconda.org/conda-forge/osx-64/kiwisolver-1.1.0-py38ha1b3eb9_0.tar.bz2
-https://conda.anaconda.org/conda-forge/osx-64/numpy-1.17.3-py38hde6bac1_0.tar.bz2
-https://conda.anaconda.org/conda-forge/noarch/olefile-0.46-py_0.tar.bz2
-https://conda.anaconda.org/conda-forge/noarch/pyparsing-2.4.6-py_0.tar.bz2
-https://conda.anaconda.org/conda-forge/noarch/pytz-2019.3-py_0.tar.bz2
-https://conda.anaconda.org/conda-forge/osx-64/six-1.14.0-py38_0.tar.bz2
-https://conda.anaconda.org/conda-forge/osx-64/tornado-6.0.3-py38h0b31af3_0.tar.bz2
-https://conda.anaconda.org/conda-forge/noarch/cycler-0.10.0-py_2.tar.bz2
-https://conda.anaconda.org/conda-forge/osx-64/pillow-7.0.0-py38h918e99a_0.tar.bz2
-https://conda.anaconda.org/conda-forge/noarch/python-dateutil-2.8.1-py_0.tar.bz2
-https://conda.anaconda.org/conda-forge/osx-64/setuptools-45.0.0-py38_1.tar.bz2
-https://conda.anaconda.org/conda-forge/osx-64/matplotlib-base-3.1.2-py38h11da6c2_1.tar.bz2
-https://conda.anaconda.org/conda-forge/osx-64/pandas-0.25.3-py38h4f17bb1_0.tar.bz2
-https://conda.anaconda.org/conda-forge/osx-64/wheel-0.33.6-py38_0.tar.bz2
-https://conda.anaconda.org/conda-forge/osx-64/pip-19.3.1-py38_0.tar.bz2
-https://conda.anaconda.org/conda-forge/osx-64/wordcloud-1.6.0-py38h0b31af3_0.tar.bz2
+name: word-cloud-tv-show
+channels:
+  - conda-forge
+  - defaults
+dependencies:
+  - ca-certificates=2019.11.28=hecc5488_0
+  - certifi=2019.11.28=py38_0
+  - cycler=0.10.0=py_2
+  - freetype=2.10.0=h24853df_1
+  - jpeg=9c=h1de35cc_1001
+  - kiwisolver=1.1.0=py38ha1b3eb9_0
+  - libblas=3.8.0=14_openblas
+  - libcblas=3.8.0=14_openblas
+  - libcxx=9.0.1=1
+  - libffi=3.2.1=h6de7cb9_1006
+  - libgfortran=4.0.0=2
+  - liblapack=3.8.0=14_openblas
+  - libopenblas=0.3.7=h3d69b6c_7
+  - libpng=1.6.37=h2573ce8_0
+  - libtiff=4.1.0=ha78913b_3
+  - llvm-openmp=9.0.1=h28b9765_1
+  - lz4-c=1.8.3=h6de7cb9_1001
+  - matplotlib-base=3.1.2=py38h11da6c2_1
+  - ncurses=6.1=h0a44026_1002
+  - numpy=1.17.3=py38hde6bac1_0
+  - olefile=0.46=py_0
+  - openssl=1.1.1d=h0b31af3_0
+  - pandas=0.25.3=py38h4f17bb1_0
+  - pillow=7.0.0=py38h918e99a_0
+  - pip=19.3.1=py38_0
+  - pyparsing=2.4.6=py_0
+  - python=3.8.1=h5c2c468_1
+  - python-dateutil=2.8.1=py_0
+  - pytz=2019.3=py_0
+  - readline=8.0=hcfe32e1_0
+  - setuptools=45.0.0=py38_1
+  - six=1.14.0=py38_0
+  - sqlite=3.30.1=h93121df_0
+  - tk=8.6.10=hbbe82c9_0
+  - tornado=6.0.3=py38h0b31af3_0
+  - wheel=0.33.6=py38_0
+  - wordcloud=1.6.0=py38h0b31af3_0
+  - xz=5.2.4=h1de35cc_1001
+  - zlib=1.2.11=h0b31af3_1006
+  - zstd=1.4.4=he7fca8b_1
+prefix: /opt/anaconda3/envs/word-cloud-tv-show
+
