--- a/environment.yml
+++ b/environment.yml
@@ -1,12 +1,20 @@
 name: word-cloud-tv-show
 channels:
+  - anaconda
   - conda-forge
   - defaults
 dependencies:
+  - asn1crypto=1.3.0=py38_0
+  - beautifulsoup4=4.8.2=py38_0
   - ca-certificates=2019.11.28=hecc5488_0
   - certifi=2019.11.28=py38_0
+  - cffi=1.13.2=py38hb5b8e2f_0
+  - chardet=3.0.4=py38_1003
+  - cryptography=2.8=py38ha12b0ac_0
   - cycler=0.10.0=py_2
   - freetype=2.10.0=h24853df_1
+  - icu=64.2=h6de7cb9_1
+  - idna=2.8=py38_1000
   - jpeg=9c=h1de35cc_1001
   - kiwisolver=1.1.0=py38ha1b3eb9_0
   - libblas=3.8.0=14_openblas
@@ -14,11 +22,15 @@ dependencies:
   - libcxx=9.0.1=1
   - libffi=3.2.1=h6de7cb9_1006
   - libgfortran=4.0.0=2
+  - libiconv=1.15=h01d97ff_1005
   - liblapack=3.8.0=14_openblas
   - libopenblas=0.3.7=h3d69b6c_7
   - libpng=1.6.37=h2573ce8_0
   - libtiff=4.1.0=ha78913b_3
+  - libxml2=2.9.10=h53d96d6_0
+  - libxslt=1.1.33=h320ff13_0
   - llvm-openmp=9.0.1=h28b9765_1
+  - lxml=4.4.2=py38he54a443_0
   - lz4-c=1.8.3=h6de7cb9_1001
   - matplotlib-base=3.1.2=py38h11da6c2_1
   - ncurses=6.1=h0a44026_1002
@@ -28,16 +40,23 @@ dependencies:
   - pandas=0.25.3=py38h4f17bb1_0
   - pillow=7.0.0=py38h918e99a_0
   - pip=19.3.1=py38_0
+  - progressbar=2.5=py_0
+  - pycparser=2.19=py_0
+  - pyopenssl=19.1.0=py38_0
   - pyparsing=2.4.6=py_0
+  - pysocks=1.7.1=py38_0
   - python=3.8.1=h5c2c468_1
   - python-dateutil=2.8.1=py_0
   - pytz=2019.3=py_0
   - readline=8.0=hcfe32e1_0
+  - requests=2.22.0=py38_1
   - setuptools=45.0.0=py38_1
   - six=1.14.0=py38_0
+  - soupsieve=1.9.5=py38_0
   - sqlite=3.30.1=h93121df_0
   - tk=8.6.10=hbbe82c9_0
   - tornado=6.0.3=py38h0b31af3_0
+  - urllib3=1.25.7=py38_0
   - wheel=0.33.6=py38_0
   - wordcloud=1.6.0=py38h0b31af3_0
   - xz=5.2.4=h1de35cc_1001
